package ar.edu.davinci.dvds20231cg4.domain;

public enum EstadoPrenda {Nueva, promocion, liquidacion}
