package ar.edu.davinci.dvds20231cg4.domain;

public class Nueva implements EstadoPrendaStrategy {

	
	
}
