package ar.edu.davinci.dvds20231cg4.domain;

public class Tienda {

	private String ventas;
	
	public void calcularGanancias() {
		
	}
	
}
