@startuml
Title Diagrama de clases de Tienda Ropita (Modelo) version 1
abstract class Prenda {
precio
estado
tipoPrenda
{abstract} calcularPrecioVenta()
}
class Nueva{
calcularPrecioVenta()
}
class Promocion{
valorDescuento
calcularPrecioVenta()
}
class Liquidacion{
porcentajeDescuento
calcularPrecioVenta()
}
enum TipoPrenda{
PANTALON
SACO
CAMISA
ETC
}
enum EstadoPrenda{
NUEVA
PROMOCION
LIQUIDACION
}
class Venta {
fecha
medioPago
ventaItems
totalVenta()
}
note top of Venta
totalVenta se calcula recorriendo todos los
items de venta y sumando el precioItem
end note
class VentaItem{
Prenda
precioVenta
cantidad
precioItem()
}
note right of VentaItem::precioVenta
El precio venta es el resultado de
Prenda.calcularPrecioVenta() de cada prenda
en el estado de la prenda
end note
note right of VentaItem::precioItem
precioVenta * cantidad
end note
class Tienda {
ventas
calcularGanancia(fecha)
}
note left of Tienda::calcularGanancia
Recorre todas las ventas del día
y calcula la ganancia de las ventas
end note
Prenda <|-- Nueva
Prenda <|-- Promocion
Prenda <|-- Liquidacion
Prenda --left TipoPrenda
Prenda --right EstadoPrenda
Venta --right VentaItem
VentaItem -- Prenda
Tienda --right Venta
@enduml